[tool.poetry]
name = "apexagente-documentation"
version = "0.1.0"
description = "Apex Agente Documentation"
authors = ["jo-project <jo.project.0911@gmail.com>"]
readme = "README.md"
packages = [{include = "apexagente_documentation"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-dracula-theme = "^1.0.4"
mkdocs-material = "^9.1.8"
pymdown-extensions = "^9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
